# pactspec

./: .env.local.example  .gitignore  ADOPTERS.md  CONTRIBUTING.md  EXPLAINER.md  GOVERNANCE.md  IP_POLICY.md  LAUNCH_POST.md  LIMITATIONS.md  README.md  RFC_TEMPLATE.md  SECURITY.md  TODO.md  VERSIONING.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.claude/commands/: pactspec-init.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/pactspec-test/: README.md  action.yml
agents/: paid-summarize.pactspec.json  summarize.pactspec.json  url-metadata.pactspec.json  validate-schema.pactspec.json
benchmarks/: README.md  api-response-quality-v1.json  medical-coding-icd11-v1.json  schema-validation-v1.json
benchmarks/unreviewed/: README.md  data-extraction-v1.json  legal-contract-review-v1.json  security-vulnerability-scan-v1.json  text-summarization-v1.json
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
conformance/: README.md
conformance/invalid/: empty-name.json  empty-skills.json  invalid-auth-type.json  invalid-id-pattern.json  invalid-pricing-currency.json  invalid-version-format.json  missing-endpoint-url.json  missing-input-schema.json  missing-output-schema.json  missing-provider-name.json  missing-skill-id.json  missing-skill-name.json  missing-spec-version.json  pricing-invalid-currency.json  pricing-invalid-model.json  pricing-invalid-protocol.json  pricing-negative-amount.json  wrong-spec-version.json
conformance/valid/: free-pricing.json  full-featured.json  minimal-free.json  minimal.json  with-auth-bearer.json  with-auth-header.json  with-delegation.json  with-license.json  with-multiple-skills.json  with-pricing-per-invocation.json  with-pricing-sol.json  with-pricing-x402.json  with-tags-and-links.json  with-test-suite.json
examples/stripe-agent/: README.md  agent.pactspec.json  server.js
github-action/: action.yml
github-action/examples/: pactspec.yml
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/pactspec_crewai/: __init__.py  tools.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/pactspec_langchain/: __init__.py  toolkit.py  tools.py  types.py
interop/: mcp-extension.md  mcp.md  openapi.md
pactspec-py/: LICENSE  README.md  pyproject.toml
pactspec-py/pactspec/: __init__.py  client.py  schema.json  types.py  validate.py
public/.well-known/: pactspec.json
public/claude/: pactspec-publish.md
public/test-suites/: paid-summarize.json  summarize.json  url-metadata.json  validate-schema.json
schemas/schemastore-submission/: SUBMIT.md  catalog-entry.json
scripts/: seed-agents.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  schema.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/[id]/: error.tsx  page.tsx
src/app/agents/[id]/report/: page.tsx
src/app/api/admin/check-pricing/: route.ts
src/app/api/agents/: route.ts
src/app/api/agents.md/: route.ts
src/app/api/agents/[id]/: route.ts
src/app/api/agents/[id]/pricing-checks/: route.ts
src/app/api/agents/[id]/telemetry/: route.ts
src/app/api/agents/[id]/validate/: route.ts
src/app/api/agents/[id]/verify-pricing/: route.ts
src/app/api/badge/[id]/: route.ts
src/app/api/benchmarks/: route.ts
src/app/api/benchmarks/[id]/run/: route.ts
src/app/api/benchmarks/leaderboard/: route.ts
src/app/api/benchmarks/results/: route.ts
src/app/api/demo/paid-summarize/: route.ts
src/app/api/demo/summarize/: route.ts
src/app/api/demo/url-metadata/: route.ts
src/app/api/demo/validate-schema/: route.ts
src/app/api/openclaw/: route.ts
src/app/api/registry-key/: route.ts
src/app/api/spec/v1/: route.ts
src/app/benchmarks/: page.tsx
src/app/benchmarks/[id]/: page.tsx
src/app/demo/: page.tsx
src/app/guides/stripe-setup/: page.tsx
src/app/openclaw/: page.tsx
src/app/pricing/: page.tsx
src/app/publish/: page.tsx
src/app/spec/: page.tsx
src/app/why/: page.tsx
src/lib/: attestation.test.ts  attestation.ts  publisher-keys.ts  search-sanitize.test.ts  search-sanitize.ts  spec-hash.test.ts  spec-hash.ts  stable-stringify.ts  trust-tier.ts  validator.security.test.ts  validator.ts
src/lib/supabase/: server.ts
src/types/: agent-spec.ts
supabase/migrations/: 001_initial.sql  002_fixes.sql  002_rls.sql  003_drop_did_sla.sql  003_validation_metrics.sql  004_agent_validation_metrics.sql  004_skills_unique_constraint.sql  005_indexes_and_retention.sql  006_delegation.sql  007_benchmarks.sql  008_telemetry.sql  009_pricing_drift.sql
