[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactspec-crewai"
version = "0.1.0"
description = "CrewAI integration for PactSpec — discover and use PactSpec agents as CrewAI tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "PactSpec", email = "hello@pactspec.dev" }]
keywords = ["pactspec", "crewai", "agents", "tools", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pactspec>=0.1.0",
    "crewai>=0.80.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://pactspec.dev"
Repository = "https://github.com/pactspec/pactspec"
Documentation = "https://docs.pactspec.dev"
