[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactspec-langchain"
version = "0.1.0"
description = "LangChain integration for PactSpec — discover and invoke verified AI agents as LangChain tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PactSpec", email = "hello@pactspec.dev" },
]
keywords = ["pactspec", "langchain", "agents", "tools", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pactspec>=0.1.0",
    "langchain-core>=0.3.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://pactspec.dev"
Repository = "https://github.com/pactspec/pactspec"
Documentation = "https://pactspec.dev/docs/integrations/langchain"

[tool.hatch.build.targets.wheel]
packages = ["pactspec_langchain"]
